bk_ida/gccida/c3/cached_make_edge
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:776:12: error: expected expression
*( _OWORD *)&result->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:776:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->flags = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:777:12: error: expected expression
*( _OWORD *)&result->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:777:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:778:12: error: expected expression
*( _OWORD *)&result->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:778:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:779:12: error: expected expression
*( _OWORD *)&result->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/cfg.c:779:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->pred_next = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cached_make_edge/src/obj/cfg.o] Error 1
